--- a/package.json
+++ b/package.json
@@ -12,9 +12,7 @@
     "gulp-imagemin": "^3.1.1",
     "gulp-plumber": "^1.1.0",
     "gulp-sass": "^3.1.0",
-    "gulp-uglify": "^2.1.2"
-  },
-  "dependencies": {
+    "gulp-uglify": "^2.1.2",
     "gulp-watch": "^4.3.11"
   }
 }
